--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
-        (function(){
+        (function() {
             emailjs.init("user_EFPjOs1VdNVpgUINDRvRX");
-            emailjs.send("iCloud", "Rosie's Email Template",{name: "Aaron", notes: "The project that I want is..."});
         })();
     </script>
     <title>Rosie</title>
@@ -62,9 +61,9 @@
                 <h5 class="uppercase text-center">Let's work together!</h5>
 
                 <div class="center-form">
-                    <form>
+                    <form onsubmit="return sendMail(this)">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+                        <input type="email" name="emailaddress" id="emailaddress" class="form-control" placeholder="Email" required />
                         <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" 
                             placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
@@ -140,6 +139,6 @@
         </div>
 
     </footer>
-    
+    <script src="assets/js/sendEmail.js"></script>
 </body>
 </html>
